feat: Add automated build system with version management
- Set up esbuild for JavaScript bundling and minification
- Add archiver for automated extension.zip generation
- Implement development scripts (dev, watch, build)
- Add publish scripts with automatic version bumping (patch/minor/major)
- Sync version numbers between package.json and manifest.json
- Update README with comprehensive documentation:
  - Detailed project structure with file explanations
  - Development workflow and scripts reference
  - Version management strategy and examples
  - Troubleshooting guide for common issues
  - Contributing guidelines for future developers
- Configure build system to copy public assets to dist folder
- Add .gitignore for node_modules and build artifacts

This establishes a professional development workflow with automated builds,
version control, and Chrome Web Store publishing ready out of the box.

--- a/package.json
+++ b/package.json
@@ -2,16 +2,28 @@
   "name": "coolors-tailwind-extension",
   "version": "1.0.0",
   "description": "",
-  "type":"module",
+  "type": "module",
   "main": "popup.js",
   "devDependencies": {
-    "esbuild": "^0.25.10"
+    "esbuild": "^0.27.1"
   },
   "scripts": {
-    "build": "node build.js",
-     "structure": "bash -c 'find . -maxdepth 4 \\( -name \"node_modules\" -o -name \".git\" -o -name \".next\" -o -name \".husky\" \\) -prune -o -not -name \".\" -print | sed \"s/[^/]*\\//|  /g\" > structure.txt && echo \"Project structure saved to structure.txt\"'"
+    "dev": "node build.js",
+    "watch": "node build.js --watch",
+    "build": "node build.js --prod",
+    "version:patch": "npm version patch --no-git-tag-version",
+    "version:minor": "npm version minor --no-git-tag-version",
+    "version:major": "npm version major --no-git-tag-version",
+    "publish:patch": "npm run version:patch && npm run sync-version && npm run build",
+    "publish:minor": "npm run version:minor && npm run sync-version && npm run build",
+    "publish:major": "npm run version:major && npm run sync-version && npm run build",
+    "sync-version": "node -e \"const pkg=require('./package.json'); const manifest=require('./public/manifest.json'); manifest.version=pkg.version; require('fs').writeFileSync('public/manifest.json', JSON.stringify(manifest, null, 2))\"",
+    "structure": "bash -c 'find . -maxdepth 4 \\( -name \"node_modules\" -o -name \".git\" -o -name \".next\" -o -name \".husky\" \\) -prune -o -not -name \".\" -print | sed \"s/[^/]*\\//|  /g\" > structure.txt && echo \"Project structure saved to structure.txt\"'"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "archiver": "^7.0.1"
+  }
 }
